--- a/app/src/components/Header/Header.css
+++ b/app/src/components/Header/Header.css
@@ -1,5 +1,8 @@
 .header-content {
   padding: var(--spacing-md);
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 h1 {
